notification fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -475,4 +475,9 @@ button:hover {
   #applogo {
     width: 60px;
   }
+  .paid, .unpaid {
+    width: 15px;
+    line-height: 1.5;
+    font-size: 10px;
+  }
 }
